--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+body{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 40px 0;
+  background-color: aliceblue;
+}
+
 .App {
   text-align: center;
 }
