register formik && loginFormik

--- a/src/styles/task.scss
+++ b/src/styles/task.scss
@@ -2,3 +2,17 @@
 .task-action{
     cursor: pointer;
 }
+
+.task{
+
+}
+
+.task-completed{
+color: gray;
+text-decoration: line-through;
+}
+
+.task-pending{
+font-weight: bold;
+color: tomato;
+}
